# openet-refet-gee

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  example.ipynb  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: build.yml
eerefet/: __init__.py  calcs.py  daily.py  hourly.py  units.py
examples/: FS_components.ipynb  gridmet.ipynb  maca_refet_comparison.ipynb  nldas.ipynb  penman.ipynb  priestley-taylor.ipynb  rtma.ipynb
geerefet/: __init__.py  calcs.py  daily.py  hourly.py  maca_refet_comp.py
openet/refetgee/: __init__.py  calcs.py  daily.py  hourly.py  monthly.py  units.py
openet/refetgee/tests/: conftest.py  test_calcs.py  test_daily.py  test_daily_refet_output.py  test_hourly.py  test_hourly_refet_output.py  test_monthly.py  test_units.py  utils.py
tests/: conftest.py  maca_refet_comp.py  test_calcs.py  test_daily.py  test_daily_refet_output.py  test_hourly.py  test_hourly_refet_output.py  test_refet.py  test_units.py
tools/: maca_loop.py
